--- a/ClientWeb/ClientWeb/Views/Film/DetailsFilm.cshtml
+++ b/ClientWeb/ClientWeb/Views/Film/DetailsFilm.cshtml
@@ -35,27 +35,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DureeMinute)
+            @Html.DisplayNameFor(model => model.DureeMinutes)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DureeMinute)
+            @Html.DisplayFor(model => model.DureeMinutes)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NomRealisateur)
+            @Html.DisplayNameFor(model => model.Realisateurs)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.NomRealisateur)
+            @Html.DisplayFor(model => model.Realisateurs)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Senariste)
+            @Html.DisplayNameFor(model => model.Scenariste)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Senariste)
+            @Html.DisplayFor(model => model.Scenariste)
         </dd>
 
         <dt>
