--- a/ClientWeb/ClientWeb/Views/Film/ListeFilm.cshtml
+++ b/ClientWeb/ClientWeb/Views/Film/ListeFilm.cshtml
@@ -12,13 +12,13 @@
             @Html.DisplayNameFor(model => model.LangueOriginale)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DureeMinute)
+            @Html.DisplayNameFor(model => model.DureeMinutes)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NomRealisateur)
+            @Html.DisplayNameFor(model => model.Realisateurs)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Senariste)
+            @Html.DisplayNameFor(model => model.Scenariste)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Resume)
@@ -38,13 +38,13 @@
             @Html.DisplayFor(modelItem => item.LangueOriginale)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DureeMinute)
+            @Html.DisplayFor(modelItem => item.DureeMinutes)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.NomRealisateur)
+            @Html.DisplayFor(modelItem => item.Realisateurs)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Senariste)
+            @Html.DisplayFor(modelItem => item.Scenariste)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Resume)
