--- a/ClientWeb/ClientWeb/Views/Film/ListeFilm.cshtml
+++ b/ClientWeb/ClientWeb/Views/Film/ListeFilm.cshtml
@@ -1,58 +1,68 @@
-﻿@model IEnumerable<ClientWeb.Models.Film>
-
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Titre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AnneeDeSortie)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LangueOriginale)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DureeMinutes)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Realisateurs)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Scenariste)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Resume)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Titre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AnneeDeSortie)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LangueOriginale)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DureeMinutes)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Realisateurs)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Scenariste)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Resume)
-        </td>
-        <td>
-            @Html.ActionLink("Details", "DetailsFilm", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
+﻿@model ClientWeb.ViewModel.FilmActionViewModel
+@{
+    ViewBag.Title = "Recherche";
 }
+<h2>@ViewBag.Title</h2>
 
-</table>
+@using (Html.BeginForm("ListeFilm", "Film", FormMethod.Post))
+{
+    <div class="col-lg-2">
+        @Html.LabelFor(model => model.LaRecherche)
+    </div>
+    <div class="col-lg-6">
+        @Html.TextBoxFor(model => model.LaRecherche, new { @style = "width:100%" })
+    </div>
+    <div class="col-lg-4">
+        <button class="btn" type="submit">Envoyer</button>
+    </div>
+}
+@if (Model.Films != null && Model.Films.Any())
+{
+    using (Html.BeginForm("DetailsFilm", "Film", FormMethod.Post))
+    {
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Films[0].Titre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Films[0].AnneeDeSortie)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Films[0].LangueOriginale)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Films[0].DureeMinutes)
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.Films)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Titre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AnneeDeSortie)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LangueOriginale)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DureeMinutes)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Details", "DetailsFilm", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+        </table>
+    }
+}
+else
+{
+    <div class="col-lg-12">
+        <p class="bg-danger">Aucun Résultat pour votre recherche</p>
+    </div>
+}
