--- a/ClientWeb/ClientWeb/Views/Home/Connexion.cshtml
+++ b/ClientWeb/ClientWeb/Views/Home/Connexion.cshtml
@@ -1,26 +1,35 @@
-﻿@{
+﻿@model ClientWeb.ViewModel.ConnexionViewModel
+
+@{
     ViewBag.Title = "Connexion";
 }
 <h2>@ViewBag.Title.</h2>
-
-
-<div class="container" style="margin-top:30px">
-    <div class="col-md-4">
-        <div class="panel panel-default">
-            <div class="panel-heading"><h3 class="panel-title"><strong>Sign In</strong></h3></div>
-            <div class="panel-body">
-                <form role="form">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email</label>
-                        @Html.TextBox("Email", null, new { @class = "form-control", placeholder = "Email" })
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        @Html.TextBox("password", null, new { @class = "form-control", placeholder = "Password" })
-                    </div>
-                    <button type="submit" class="btn btn-sm btn-default">Sign in</button>
-                </form>
+@using (Html.BeginForm())
+{
+    <div class="container" style="margin-top:30px">
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading"><h3 class="panel-title"><strong>Sign In</strong></h3></div>
+                <div class="panel-body">
+                    <form role="form">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Email)
+                            @Html.TextBoxFor(model => model.Email, new { @class = "form-control", placeholder = "Email" })
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.MotDePasse)
+                            @Html.TextBoxFor(model => model.MotDePasse, new { @class = "form-control", placeholder = "Password" })
+                        </div>
+                        @if (Model.AfficherErreur)
+                        {
+                            <div class="col-lg-12">
+                                <p class="bg-danger">Email ou Mot de passe incorrect</p>
+                            </div>
+                        }
+                        <button type="submit" class="btn btn-sm btn-default">Se connecter</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
