--- a/ClientWeb/ClientWeb/Views/Home/Connexion.cshtml
+++ b/ClientWeb/ClientWeb/Views/Home/Connexion.cshtml
@@ -13,17 +13,17 @@
                 <div class="panel-body">
                     <form role="form">
                         <div class="form-group">
-                            @Html.LabelFor(model => model.Email)
-                            @Html.TextBoxFor(model => model.Email, new { @class = "form-control", placeholder = "Email" })
+                            @Html.LabelFor(model => model.EmailOuMatricule)
+                            @Html.TextBoxFor(model => model.EmailOuMatricule, new { @class = "form-control" })
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(model => model.MotDePasse)
-                            @Html.TextBoxFor(model => model.MotDePasse, new { @class = "form-control", placeholder = "Password" })
+                            @Html.TextBoxFor(model => model.MotDePasse, new { @class = "form-control" })
                         </div>
-                        @if (Model.AfficherErreur)
+                        @if (!Model.Erreur.IsEmpty())
                         {
                             <div class="col-lg-12">
-                                <p class="bg-danger">Email ou Mot de passe incorrect</p>
+                                <p class="bg-danger">@Html.DisplayFor(model => model.Erreur)</p>
                             </div>
                         }
                         <button type="submit" class="btn btn-sm btn-default">Se connecter</button>
