--- a/ClientWeb/ClientWeb/Views/Home/Connexion.cshtml
+++ b/ClientWeb/ClientWeb/Views/Home/Connexion.cshtml
@@ -18,7 +18,7 @@
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(model => model.MotDePasse)
-                            @Html.TextBoxFor(model => model.MotDePasse, new { @class = "form-control" })
+                            @Html.PasswordFor(model => model.MotDePasse, new { @class = "form-control" })
                         </div>
                         @if (!Model.Erreur.IsEmpty())
                         {
