--- a/ClientWeb/ClientWeb/Views/Shared/_Layout.cshtml
+++ b/ClientWeb/ClientWeb/Views/Shared/_Layout.cshtml
@@ -23,13 +23,16 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Recherche de film", "Recherche", "Film")</li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+
                     @if (System.Web.HttpContext.Current.Session["UtilisateurConnecté"] == null)
                     {
                         <li>@Html.ActionLink("Connexion", "Connexion", "Home")</li>
                     }
                     else
                     {
-                        <li>@Html.ActionLink("Deconnexion", "Deconnexion", "Home")</li>
+                        <li class="navbar-right">@Html.ActionLink("Deconnexion", "Deconnexion", "Home")</li>
                     }
                 </ul>
             </div>
