Add film hbm config

--- a/ClientWeb/ClientWeb/Views/Film/DetailsFilm.cshtml
+++ b/ClientWeb/ClientWeb/Views/Film/DetailsFilm.cshtml
@@ -72,11 +72,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.film.realisateur)
+            @Html.DisplayNameFor(model => model.film.Realisateur)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.film.realisateur.Personne.Prenom) @Html.DisplayFor(model => model.film.realisateur.Personne.NomFamille)
+            @Html.DisplayFor(model => model.film.Realisateur.Personne.Prenom) @Html.DisplayFor(model => model.film.Realisateur.Personne.NomFamille)
         </dd>
 
         @if (Model.film.Acteurs != null)
