--- a/ClientWeb/ClientWeb/Views/Film/ListeFilm.cshtml
+++ b/ClientWeb/ClientWeb/Views/Film/ListeFilm.cshtml
@@ -1,4 +1,5 @@
-﻿@model ClientWeb.ViewModel.FilmActionViewModel
+﻿@using ClientWeb.Models
+@model ClientWeb.ViewModel.FilmActionViewModel
 @{
     ViewBag.Title = "Recherche";
 }
@@ -31,7 +32,7 @@
         <button class="btn" type="submit">Envoyer</button>
     </div>
 }
-@if (Model.Films != null && Model.Films.Any())
+@if (((IList<Film>) ViewBag.Films).Count > 0)
 {
     <table class="table">
         <tr>
@@ -50,20 +51,20 @@
             <th></th>
         </tr>
 
-        @foreach (var item in Model.Films)
+        @foreach (var item in ViewBag.Films)
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Titre)
+                    @Html.DisplayFor(modelItem => modelItem.Titre)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.AnneeDeSortie)
+                    @Html.DisplayFor(modelItem => modelItem.AnneeSortie)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.LangueOriginale)
+                    @Html.DisplayFor(modelItem => modelItem.LangueOriginale)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DureeMinutes)
+                    @Html.DisplayFor(modelItem => modelItem.DureeMinutes)
                 </td>
                 <td>
                     @Html.ActionLink("Details", "DetailsFilm", new { id = item.Id })
