--- a/ClientWeb/ClientWeb/Views/Shared/_Layout.cshtml
+++ b/ClientWeb/ClientWeb/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Recherche de film", "Recherche", "Film")</li>
+                    <li>@Html.ActionLink("Recherche de film", "ListeFilm", "Film")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
