--- a/ClientWeb/ClientWeb/Views/Film/DetailsFilm.cshtml
+++ b/ClientWeb/ClientWeb/Views/Film/DetailsFilm.cshtml
@@ -71,7 +71,7 @@
         @if (Model.Film.Scenaristes != null)
         {
             <dt>
-                @Html.DisplayNameFor(model => model.Film.Scenaristes[0])
+                Scénariste(s)
             </dt>
 
             foreach (var item in Model.Film.Scenaristes)
